{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 177,
  "lineage": "2446a67b-5eea-c471-1a20-c7c27450fb91",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07d81f0c6cbc9808b",
            "domain": "vpc",
            "id": "eipalloc-03c8b0de859430464",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b66cadfb265c1c4c",
            "private_dns": "ip-10-0-1-16.ec2.internal",
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-52-55-42-38.compute-1.amazonaws.com",
            "public_ip": "52.55.42.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:874464226883:instance/i-0cdb3fa1eca5b9f2c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cdb3fa1eca5b9f2c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09aaa00ddf88ddde2",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_ip": "10.0.1.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0375fefe639ba82f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05dae0bd076aa7f04"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02094903df399ffd4",
            "tags": {
              "Name": "New_Bastion_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dae0bd076aa7f04"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.New_Web_SG",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:874464226883:instance/i-0d379fe345fa8bb45",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d379fe345fa8bb45",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6ece7ac96e47ebc",
            "private_dns": "ip-10-0-2-52.ec2.internal",
            "private_ip": "10.0.2.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0728e041d515a39c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0987ee2c09a56f736"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020e7adfcf89de477",
            "tags": {
              "Name": "New_Priv_DB_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0987ee2c09a56f736"
            ]
          },
          "dependencies": [
            "aws_security_group.New_DB_SG",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c94855ba95c71c99",
            "arn": "arn:aws:ec2:us-east-1:874464226883:instance/i-09ead4c24300a0294",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ead4c24300a0294",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bbebb10a9b4e4078",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_ip": "10.0.1.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f381155a906d5675",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05dae0bd076aa7f04"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02094903df399ffd4",
            "tags": {
              "Name": "New_Pub_Web_Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dae0bd076aa7f04"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.New_Web_SG",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874464226883:internet-gateway/igw-031e3ffe8694e13f7",
            "id": "igw-031e3ffe8694e13f7",
            "owner_id": "874464226883",
            "tags": {
              "Name": "Main IGW"
            },
            "vpc_id": "vpc-080880f096e5b80e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c8b0de859430464",
            "id": "nat-03160dfb9fb2323fd",
            "network_interface_id": "eni-0b66cadfb265c1c4c",
            "private_ip": "10.0.1.16",
            "public_ip": "52.55.42.38",
            "subnet_id": "subnet-02094903df399ffd4",
            "tags": {
              "Name": "Main NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d22ed1064a3fee8d",
            "owner_id": "874464226883",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03160dfb9fb2323fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-080880f096e5b80e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0adc4cc37d18ce95f",
            "owner_id": "874464226883",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031e3ffe8694e13f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-080880f096e5b80e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7943293cf2f3d7e",
            "route_table_id": "rtb-0d22ed1064a3fee8d",
            "subnet_id": "subnet-020e7adfcf89de477"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc82967ff20d0ff",
            "route_table_id": "rtb-0adc4cc37d18ce95f",
            "subnet_id": "subnet-02094903df399ffd4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "New_DB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874464226883:security-group/sg-0987ee2c09a56f736",
            "description": "Allow ssh inbound traffic from web_SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0987ee2c09a56f736",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "SSH from Web Tier",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05dae0bd076aa7f04"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "icmp from VPC",
                "from_port": 23,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 23
              }
            ],
            "name": "DB_Traffic",
            "name_prefix": "",
            "owner_id": "874464226883",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "New_DB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-080880f096e5b80e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.New_Web_SG",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "New_Web_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874464226883:security-group/sg-05dae0bd076aa7f04",
            "description": "Allow TLS, ssh and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dae0bd076aa7f04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Web_Tier_Traffic",
            "name_prefix": "",
            "owner_id": "874464226883",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "New_Web_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-080880f096e5b80e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874464226883:subnet/subnet-020e7adfcf89de477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-020e7adfcf89de477",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874464226883",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-080880f096e5b80e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874464226883:subnet/subnet-02094903df399ffd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02094903df399ffd4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874464226883",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-080880f096e5b80e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:874464226883:vpc/vpc-080880f096e5b80e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-02dca69ea237cd4d3",
            "default_route_table_id": "rtb-02a1bf42a1ee77b00",
            "default_security_group_id": "sg-0d0699dfb4b8ee683",
            "dhcp_options_id": "dopt-ed821097",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-080880f096e5b80e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02a1bf42a1ee77b00",
            "owner_id": "874464226883",
            "tags": {
              "Name": "Main VPC"
            }
          }
        }
      ]
    }
  ]
}